# openschema

./: .gitignore  .pre-commit-config.yaml  .pylintrc  NOTICE  README.md  constraints.txt  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
docs/: _custom.py  catalog.rst  conf.py  index.rst  install.rst  spelling_wordlist.txt
docs/_templates/: catalog.rst  schema.rst
docs/templates/autoapi/: index.rst
docs/templates/autoapi/python/: module.rst
openschema/: __init__.py
openschema/kaggle/: __init__.py  _avazu.py  _titanic.py  titanic.py
openschema/sklearn/: __init__.py  _breast_cancer.py  _iris.py  boston.py  breast_cancer.py  iris.py
tests/: __init__.py  test_kaggle.py  test_sklearn.py
